
   * path6: New tool
     Added a fully-IPv6-capable traceroute tool, named path6.

   * script6: New tool
     Added a new tool which incorporates new functionality and also provides
     a shortcut to other existing tools.

   * blackhole6: New tool
     Added a new tool isolates IPv6 blackholes.

   * udp6: New tool
     Added a new tool that can send arbirary UDP/IPv6 packets.


SI6 Networks IPv6 Toolkit v1.5.3

   * All: Fix packet size issues
     Many tools were using a (sometimes non-initialized) max_packet_size
     variable, instead of the corresponding member of the idata structure.

   * All: Add support for some Mac OS version
     The toolkit would not compile on Lion (10.7.5) or Snow Leopard (10.6.8),
     as a result of inconsistencies of how BYTE_ORDER-related constants were
     (not) set in those versions of Mac OS.

SI6 Networks IPv6 Toolkit v1.5.2

   * All: Add support for GNU Debian/kfreebsd
     The toolkit would not build on GNU Debian/kfreebsd before this release.

   * tcp6: Add support for TCP/IPv6 probes
     tcp6 can now send TCP/IPv6 packets ("--probe-mode" option), and read the 
     TCP response packets, if any. This can be leveraged for port scans, and
     miscellaneous measurements.

SI6 Networks IPv6 Toolkit v1.5.1
   * Fix Mac OS breakage
     libipv6.h had incorrect definitions for "struct tcp_hdr".

SI6 Networks IPv6 Toolkit v1.5

   * All: Improved the next-hop determination
     Since the toolkit employs libpcap (as there is no portable way to forge
     IPv6 addresses and do other tricks), it was relying on the user specifying
     a network interface ("-i" was mandatory for all tools) and that routers
     would send Router Advertisements on the local links. This not only was 
     rather inconvenient for users (specifying a network interface was not 
     warranted), but also meant that in setups where RAs where not available
     (e.g., manual configuration), the tools would fail. The toolkit now